--- a/index.html
+++ b/index.html
@@ -2,6 +2,11 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <script type="text/javascript" src="./static/tweenjs-0.5.1.min.js"></script>
+    <script type="text/javascript" src="./static/easeljs-0.7.1.min.js"></script>
+    <script type="text/javascript">
+        window.createjs = createjs
+    </script>
     <title>Color Pop</title>
   </head>
   <body>
